tests/baselines/reference/es6ImportWithoutFromClauseInEs5.errors.txt
es6ImportWithoutFromClauseInEs5_1.ts(1,8): error TS2307: Cannot find module 'es6ImportWithoutFromClauseInEs5_0' or its corresponding type declarations.


==== es6ImportWithoutFromClauseInEs5_0.ts (0 errors) ====
    export var a = 10;
    
==== es6ImportWithoutFromClauseInEs5_1.ts (1 errors) ====
    import "es6ImportWithoutFromClauseInEs5_0";
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportWithoutFromClauseInEs5_0' or its corresponding type declarations.